Initial Edits with Help of GPT 4

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,22 +1,37 @@
-<h1>New Entry</h1>
+<%= form_with model: [@place, @entry], local: true, multipart: true do |form| %>
+  <% if @entry.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
 
-<form action="/entries" method="post">
-  <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
+      <ul>
+        <% @entry.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-  <p>
-    <label for="title_input">Title</label>
-    <input type="text" name="title" id="title_input">
-  </p>
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :title, id: :entry_title %>
+  </div>
 
-  <p>
-    <label for="description_input">Description</label>
-    <input type="text" name="description" id="description_input">
-  </p>
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description, id: :entry_description %>
+  </div>
 
-  <p>
-    <label for="occurred_on_input">Occurred On</label>
-    <input type="date" name="occurred_on" id="occurred_on_input">
-  </p>
+  <div class="field">
+    <%= form.label :occurred_on %>
+    <%= form.date_select :occurred_on, id: :entry_occurred_on %>
+  </div>
 
-  <button>Save</button>
-</form>
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image, id: :entry_image %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
