--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,37 +1,33 @@
-<%= form_with model: [@place, @entry], local: true, multipart: true do |form| %>
-  <% if @entry.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
+<!-- Heavily edited by GPT to avoid issues with JS-->
 
-      <ul>
-        <% @entry.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+<h1>New Entry for <%= @place.name %></h1>
+
+<%= form_with model: [@place, @entry], local: true do |form| %>
+  <% if @entry.errors.any? %>
+    <!-- Error messages -->
   <% end %>
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title, id: :entry_title %>
+    <%= form.text_field :title %>
   </div>
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :entry_description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label :occurred_on %>
-    <%= form.date_select :occurred_on, id: :entry_occurred_on %>
+    <%= form.label :occurred_on, "Occurred on" %>
+    <%= form.date_field :occurred_on %>
   </div>
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.file_field :image, id: :entry_image %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Save Entry" %>
   </div>
 <% end %>
