--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,17 +16,17 @@
 
   <div class="field">
     <%= form.label :username %>
-    <%= form.text_field :username, id: :user_username %>
+    <%= form.text_field :username %>
   </div>
 
   <div class="field">
     <%= form.label :email %>
-    <%= form.email_field :email, id: :user_email %>
+    <%= form.email_field :email %>
   </div>
 
   <div class="field">
     <%= form.label :password %>
-    <%= form.password_field :password, id: :user_password %>
+    <%= form.password_field :password %>
   </div>
 
   <div class="actions">
