--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,4 +1,6 @@
-<!-- Heavily edited by GPT to avoid issues with JS-->
+<!-- Views/Entries/New.html.erb-->
+
+<!-- Heavily edited by GPT to avoid issues -->
 
 <h1>New Entry for <%= @place.name %></h1>
 
