--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,14 @@
+<!--Views/Places/Show.html.erb-->
+
 <h1><%= @place["name"] %></h1>
 
 <h2>My Entries</h2>
-<% for entry in @entries %>
+
+<% @entries.each do |entry| %>
+  <% if entry.image.attached? %>
+    <%= image_tag entry.image, class: "your-custom-class" %>
+  <% end %>
+  <h3><%= entry.title %></h3>
   <h3><%= entry["title"] %></h3>
   <h4><%= entry["occurred_on"] %></h4>
   <p><%= entry["description"] %></p>
