--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,35 +1,18 @@
-<!-- app/views/users/new.html.erb Edits from GPT 4.0 based on user story for logging in -->
+<!-- app/views/users/new.html.erb-->
+
+<!--Edits from GPT 4.0 based on user story for logging in -->
 
 <h1>New User Account</h1>
 
 <%= form_with model: @user, local: true do |form| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prevented this user from being saved:</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= form.label :username %>
+  <%= form.text_field :username %>
 
-  <div class="field">
-    <%= form.label :username %>
-    <%= form.text_field :username %>
-  </div>
+  <%= form.label :email %>
+  <%= form.email_field :email %>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.email_field :email %>
-  </div>
+  <%= form.label :password %>
+  <%= form.password_field :password %>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit "Signup" %>
-  </div>
+  <%= form.submit "Sign Up" %>
 <% end %>
